--- a/role-highlights.html
+++ b/role-highlights.html
@@ -623,24 +623,51 @@
                      data-aos-anchor-placement="top-bottom">
                      <div class="swiper-slide">
                         <img src="./assets/img/quotes.svg" class="img-fluid mb-4" alt="quotes" />
-                        <p>Chipr isn’t just about sales; it’s about building yourself. Within 6 months, I was leading a team and making more than ever before.”</p>
+                        <p>This is an organization with a foundation based on making the average person very successful in what they do.</p>
                         <p>-- <br/>
-                           <span class="small-lead">Marcus, <br/>Regional Director</span> 
+                           <span class="small-lead">Tabatha</span> 
                         </p>
                      </div>
-                     <!-- End testimonial item -->
                      <div class="swiper-slide">
                         <img src="./assets/img/quotes.svg" class="img-fluid mb-4" alt="quotes" />
-                        <p>Chipr isn’t just about sales; it’s about building yourself. Within 6 months, I was leading a team and making more than ever before.”</p>
+                        <p>In my previous employment, I was with a company where I traveled all the time…I wasn’t home and I missed out on a lot. I’m actually home now, and Chipr brought me into their family from day one.</p>
                         <p>-- <br/>
-                           <span class="small-lead">Marcus, <br/>Regional Director</span> 
+                           <span class="small-lead">Jeromee</span> 
                         </p>
                      </div>
                      <div class="swiper-slide">
-                        <img src="./assets/img/quotes.svg" class="img-fluid" alt="quotes" />
-                        <p>Chipr isn’t just about sales; it’s about building yourself. Within 6 months, I was leading a team and making more than ever before.”</p>
+                        <img src="./assets/img/quotes.svg" class="img-fluid mb-4" alt="quotes" />
+                        <p>There are opportunities to move up. There are opportunities to grow and expand. The female perspective is absolutely critical in the field. So don’t think it’s a guy’s field.</p>
                         <p>-- <br/>
-                           <span class="small-lead">Marcus, <br/>Regional Director</span> 
+                           <span class="small-lead">Barbara</span> 
+                        </p>
+                     </div>
+                     <div class="swiper-slide">
+                        <img src="./assets/img/quotes.svg" class="img-fluid mb-4" alt="quotes" />
+                        <p>I joined Chipr to avoid taking out student loans. Now, thanks to my earnings at Chipr, I’m able to attend cosmetology school, cover my tuition, and prepare for my future career.</p>
+                        <p>-- <br/>
+                           <span class="small-lead">Maci</span> 
+                        </p>
+                     </div>
+                     <div class="swiper-slide">
+                        <img src="./assets/img/quotes.svg" class="img-fluid mb-4" alt="quotes" />
+                        <p>The biggest thing that I like to talk to people about is the environment that Chipr creates. It’s not just how different of a door to door space it is, you’re buying into something more.</p>
+                        <p>-- <br/>
+                           <span class="small-lead">Brinsen</span> 
+                        </p>
+                     </div>
+                     <div class="swiper-slide">
+                        <img src="./assets/img/quotes.svg" class="img-fluid mb-4" alt="quotes" />
+                        <p>Just make a real connection with the person you’re speaking to. Have a conversation. What you’ll find is that customers are willing to connect, they love the product, and that this is really easy.</p>
+                        <p>-- <br/>
+                           <span class="small-lead">Tyler</span> 
+                        </p>
+                     </div>
+                     <div class="swiper-slide">
+                        <img src="./assets/img/quotes.svg" class="img-fluid mb-4" alt="quotes" />
+                        <p>Working at Chipr is one of the greatest experiences! What sets us apart is our people, we genuinely love our people. Building genuine connections is something that we live every day. Everybody here embodies our Core S Factors, both in and out of work. You're surrounded by people who won't just support you, they'll challenge you to be your best self!</p>
+                        <p>-- <br/>
+                           <span class="small-lead">Allison</span> 
                         </p>
                      </div>
                      <!-- End testimonial item -->
