--- a/referral.html
+++ b/referral.html
@@ -302,8 +302,7 @@
                            autoplay
                            loop
                            muted
-                           data-aos="fade-in"
-                           data-aos-delay="100"
+                           playsinline
                            >
                            <source
                               src="assets/img/videos/referral-hero-video.mp4"
