--- a/referral.html
+++ b/referral.html
@@ -368,7 +368,8 @@
                            class="responsive-video"
                            autoplay
                            loop
-                           muted>
+                           muted
+                           playsinline>
                            <source
                               src="./assets/img/videos/referral-hero-video.mp4"
                               type="video/mp4"
