--- a/role-highlights.html
+++ b/role-highlights.html
@@ -439,7 +439,7 @@
                                           disabled
                                           />
                                        <label class="form-check-label" for="radio-silver">
-                                       Sliver
+                                       Silver
                                        </label>
                                     </div>
                                     <!-- Gold (active) -->
