--- a/index.html
+++ b/index.html
@@ -2,21 +2,7 @@
 <html lang="en">
   <head>
     <!-- Google Tag Manager -->
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({
-          "gtm.start": new Date().getTime(),
-          event: "gtm.js",
-        });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-TW6X2QVC");
-    </script>
+   
     <!-- End Google Tag Manager -->
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -58,42 +44,6 @@
       src="https://fast.wistia.com/assets/external/E-v1.js"
       async
     ></script>
-    <!-- Meta Pixel Code -->
-    <script>
-      !(function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-          n.callMethod
-            ? n.callMethod.apply(n, arguments)
-            : n.queue.push(arguments);
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = "2.0";
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s);
-      })(
-        window,
-        document,
-        "script",
-        "https://connect.facebook.net/en_US/fbevents.js"
-      );
-      fbq("init", "351670044189293");
-      fbq("track", "PageView");
-    </script>
-    <noscript
-      ><img
-        height="1"
-        width="1"
-        style="display: none"
-        src="https://www.facebook.com/tr?id=351670044189293&ev=PageView&noscript=1"
-    /></noscript>
-    <!-- End Meta Pixel Code -->
   </head>
 
   <body class="role-page">
@@ -291,7 +241,7 @@
           </div>
           <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-4">
-              <div class="mt-6">
+              <div>
                 <h1
                   data-aos="fade-up"
                   data-aos-delay="200"
@@ -306,15 +256,20 @@
                   data-aos-delay="300"
                   data-aos-anchor-placement="top-bottom"
                 >
-                  Feel Good About What You Sell<br />
-                  <strong
-                    >• Big Money • Ethical Product • Career Growth • $20
-                    Referral Bonus.</strong
-                  >
+                  Feel Good About What You Sell
                 </p>
-                <div>
-                  <a class="link-text"
-                    >Start Quiz
+                <ul class="custom-list"  data-aos="fade-up"
+                  data-aos-delay="350"
+                  data-aos-anchor-placement="top-bottom">
+                  <li>Big Money </li>
+                    <li>Ethical Product</li> 
+                    <li>Career Growth </li>
+                    <li>$20 Referral Bonus.</li>
+                </ul>
+                <div  data-aos="fade-up"
+                  data-aos-delay="400"
+                  data-aos-anchor-placement="top-bottom">
+                  <a class="link-text" href="https://doorstep-recruit-flow.lovable.app/" target="_blank">Check Fit
                     <span class="text-accent"
                       ><i class="bi bi-arrow-right-short"></i></span
                   ></a>
@@ -322,7 +277,7 @@
               </div>
             </div>
             <div class="col-lg-8">
-              <div class="content ps-0 ps-lg-5">
+              <div class="content ps-0 ps-lg-5 mt-4">
                 <div class="position-relative">
                   <div
                     class="video-wrap"
@@ -364,22 +319,95 @@
             </div>
           </div>
         </div>
-        <div class="side-btn" data-aos="flip-left" data-aos-delay="280">
-          <a href="smart-scheduling.html"
-            ><img src="assets/img/side-btn.png" height="127"
-          /></a>
-        </div>
       </section>
-      <!-- /Hero Section -->
-      <!-- Timeline Section -->
-
-      <!-- /Performance Section -->
-      <!-- Success Section -->
-      <section id="role-calculator" class="role-calculator section mt-6">
+     <section class="section fit-check">
+        <div class="container custom-container">
+          <div class="row">
+            <div class="col-sm-12 col-md-6">
+              <h2  data-aos="fade-up"
+                  data-aos-delay="100"
+                  data-aos-anchor-placement="top-bottom">Ready to earn <br/> up to <span class="text-accent">$275 per <br /> install?</span></h2>
+              <p  data-aos="fade-up"
+                  data-aos-delay="150"
+                  data-aos-anchor-placement="top-bottom">Base commission is $170 per install</p>
+                <p  data-aos="fade-up"
+                  data-aos-delay="200"
+                  data-aos-anchor-placement="top-bottom" class="lead">Quick 60-sec assessment!</p>
+            </div>
+             <div class="d-none d-md-block col-md-6">
+              <div class="content-wrapper">
+                <div class="d-flex align-items-center justify-content-center" style="gap: 10px;"  data-aos="fade-up"
+                  data-aos-delay="100"
+                  data-aos-anchor-placement="top-bottom">
+                  <img src="./assets/img/fit-check.svg" height="30"  alt="Quick Fit Check" />
+                  <h3>Quick Fit Check</h3>
+                </div>
+                <div class="row mt-36"  data-aos="fade-up"
+                  data-aos-delay="150"
+                  data-aos-anchor-placement="top-bottom">
+                  <div class="col-3 border-r">
+                    <h4>ONE</h4>
+                    <h6>min</h6>
+                  </div>
+                   <div class="col-5 text-center">
+                     <h4>FIVE</h4>
+                    <h6>questions</h6>
+                   </div>
+                    <div class="col-4 border-l last-col">
+                      <h4>NO</h4>
+                      <h6>resume</h6>
+                    </div>
+                </div>
+                <div class="mt-6"  data-aos="fade-up"
+                  data-aos-delay="200"
+                  data-aos-anchor-placement="top-bottom">
+                <a class="cta-btn cta-btn-filled" href="https://doorstep-recruit-flow.lovable.app/" target="_blank">
+                  START instant assessment
+                </a>
+                </div>
+                <p class="mt-4"  data-aos="fade-up"
+                  data-aos-delay="210"
+                  data-aos-anchor-placement="top-bottom">Join 1,000+ reps earning $100k+ nationwide</p>
+              </div>
+             </div>
+          </div>
+        </div>
+     </section>
+      <section class="section fit-check fit-check-sm d-block d-md-none">
+        <div class="container custom-container">      
+           
+              <div class="w-100 content-wrapper">
+                <div class="d-flex align-items-center justify-content-center" style="gap: 10px;">
+                  <img src="./assets/img/fit-check.svg" height="30" alt="Quick Fit Check" />
+                  <h3>Quick Fit Check</h3>
+                </div>
+                <div class="row mt-36">
+                  <div class="col-3 border-r">
+                    <h4>ONE</h4>
+                    <h6>min</h6>
+                  </div>
+                   <div class="col-5 text-center">
+                     <h4>FIVE</h4>
+                    <h6>questions</h6>
+                   </div>
+                    <div class="col-4 border-l last-col">
+                      <h4>NO</h4>
+                      <h6>resume</h6>
+                    </div>
+                </div>
+                <div class="mt-6">
+                <a class="cta-btn cta-btn-filled" href="https://doorstep-recruit-flow.lovable.app/" target="_blank">
+                  START instant assessment
+                </a>
+                </div>
+                 <p class="mt-4">Join 1,000+ reps earning $100k+ nationwide</p>
+              </div>
+            
+          </div>
+     </section>
+      <section id="role-calculator" class="role-calculator section">
         <div
           class="container custom-container"
-          data-aos="fade-up"
-          data-aos-delay="100"
         >
           <h2>
             See How Much You <br />
@@ -750,25 +778,33 @@
         </div>
       </section>
       <section class="training">
-        <div class="container custom-container">
+        <div class="container custom-container"  data-aos="fade-up"
+                  data-aos-delay="100"
+                  data-aos-anchor-placement="top-bottom">
           <h2>
             Next training cohort locks in
-            <span class="text-accent">[DD: hh : mm]</span>
+            <span class="text-default">[DD: hh : mm]</span>
           </h2>
         </div>
       </section>
       <section class="q-a-section">
         <div class="custom-container container">
-          <h2>
+          <h2  data-aos="fade-up"
+                  data-aos-delay="100"
+                  data-aos-anchor-placement="top-bottom">
             Questions? <br />
             We’ve got the<br />answers.
           </h2>
-          <p>
+          <p  data-aos="fade-up"
+                  data-aos-delay="150"
+                  data-aos-anchor-placement="top-bottom">
             Are you still wondering what you can expect while working at Chipr? 
             Here are some of the most commonly asked questions, and we’re happy
             to answer them!
           </p>
-          <div class="row align-items-stretch d-none d-md-block">
+          <div class="row align-items-stretch d-none d-md-block"  data-aos="fade-up"
+                  data-aos-delay="200"
+                  data-aos-anchor-placement="top-bottom">
             <div class="col-4 d-inline-flex">
               <ul class="tabs-vertical h-100">
                 <li class="active">How much can I <br />earn at Chipr?</li>
@@ -784,7 +820,8 @@
             </div>
             <div class="col-7 d-inline-flex">
               <div class="tab-content h-100">
-                <p>How much can I earn at Chipr?</p>
+                <img src="./assets/img/tab-image.png" width="300" />
+                <p class="mt-4">How much can I earn at Chipr?</p>
                 <p>
                   At Chipr, your earnings grow with your skills and dedication.
                   Some new-hire sales reps immediately reach higher tiers within
@@ -1002,14 +1039,17 @@
         <div class="container custom-container position-relative">
           <div class="row">
             <div class="col-sm-12 col-md-3">
-              <h2 class="white">Let’s Connect Soon</h2>
+              <h2 class="white"  data-aos="fade-up"
+                  data-aos-delay="100"
+                  data-aos-anchor-placement="top-bottom">Let’s Connect Soon</h2>
             </div>
             <div class="col-sm-12 col-md-9">
               <div class="row">
                 <div
                   class="col-sm-12 col-md-6 mt-sm-4"
                   data-aos="fade-up"
-                  data-aos-delay="180"
+                  data-aos-delay="100"
+                  data-aos-anchor-placement="top-bottom"
                 >
                   <label for="fName" class="form-label" data-aos="fade-up"
                     >First Name</label
@@ -1019,14 +1059,13 @@
                     class="form-control"
                     id="fName"
                     placeholder=""
-                    data-aos="fade-up"
-                    data-aos-delay="200"
                   />
                 </div>
                 <div
                   class="col-sm-12 col-md-6 mt-sm-4"
                   data-aos="fade-up"
-                  data-aos-delay="180"
+                  data-aos-delay="100"
+                  data-aos-anchor-placement="top-bottom"
                 >
                   <label for="lName" class="form-label">Last Name</label>
                   <input
@@ -1034,14 +1073,13 @@
                     class="form-control"
                     id="lName"
                     placeholder=""
-                    data-aos="fade-up"
-                    data-aos-delay="200"
                   />
                 </div>
                 <div
                   class="col-sm-12 col-md-6 mt-6 mt-sm-4"
                   data-aos="fade-up"
-                  data-aos-delay="180"
+                  data-aos-delay="150"
+                  data-aos-anchor-placement="top-bottom"
                 >
                   <label for="email" class="form-label">Email</label>
                   <input
@@ -1049,14 +1087,13 @@
                     class="form-control"
                     id="email"
                     placeholder=""
-                    data-aos="fade-up"
-                    data-aos-delay="200"
                   />
                 </div>
                 <div
                   class="col-sm-12 col-md-6 mt-6 mt-sm-4"
                   data-aos="fade-up"
-                  data-aos-delay="180"
+                  data-aos-delay="150"
+                  data-aos-anchor-placement="top-bottom"
                 >
                   <label for="phNumber" class="form-label">Phone Number</label>
                   <input
@@ -1064,13 +1101,11 @@
                     class="form-control"
                     id="phNumber"
                     placeholder=""
-                    data-aos="fade-up"
-                    data-aos-delay="200"
                   />
                 </div>
-                <div class="col-sm-12 col-md-6 mt-6 mt-sm-4">
+                <div class="col-sm-12 col-md-6 mt-6 mt-sm-4" data-aos="fade-up" data-aos-delay="200" data-aos-anchor-placement="top-bottom">
                   <div class="row">
-                    <div class="col-6" data-aos="fade-up" data-aos-delay="180">
+                    <div class="col-6">
                       <select
                         class="form-select form-select-lg mb-3"
                         aria-label="Large select example"
@@ -1078,7 +1113,7 @@
                         <option>State</option>
                       </select>
                     </div>
-                    <div class="col-6" data-aos="fade-up" data-aos-delay="180">
+                    <div class="col-6" >
                       <select
                         class="form-select form-select-lg mb-3"
                         aria-label="Large select example"
@@ -1091,14 +1126,22 @@
                 <div
                   class="col-12 mt-6 mt-sm-4"
                   data-aos="fade-up"
-                  data-aos-delay="180"
+                  data-aos-delay="220"
+                  data-aos-anchor-placement="top-bottom"
                 >
                   <label for="messge" class="form-label">Message</label>
                   <textarea
                     class="form-control"
                     id="message"
                     rows="1"
+                    placeholder="Write your message"
                   ></textarea>
+                </div>
+                <div
+                  class="col-12 mt-6 mt-sm-4" data-aos="fade-up"
+                  data-aos-delay="230"
+                  data-aos-anchor-placement="top-bottom">
+                  <button class="cta-btn btn-black">SCHEDULE INTERVIEW</button>
                 </div>
               </div>
             </div>
