--- a/index.html
+++ b/index.html
@@ -277,7 +277,6 @@
                   <a
                     class="link-text"
                     href="https://doorstep-recruit-flow.lovable.app/"
-                    target="_blank"
                     >Check Fit
                     <span class="text-accent"
                       ><i class="bi bi-arrow-right-short"></i></span
@@ -405,7 +404,6 @@
                   <a
                     class="cta-btn cta-btn-filled"
                     href="https://doorstep-recruit-flow.lovable.app/"
-                    target="_blank"
                   >
                     START instant assessment
                   </a>
@@ -454,9 +452,7 @@
             <div class="mt-6">
               <a
                 class="cta-btn cta-btn-filled"
-                href="https://doorstep-recruit-flow.lovable.app/"
-                target="_blank"
-              >
+                href="https://doorstep-recruit-flow.lovable.app/">
                 START instant assessment
               </a>
             </div>
