--- a/index.html
+++ b/index.html
@@ -248,8 +248,12 @@
                   data-aos-anchor-placement="top-bottom"
                 >
                   <span class="default-text-color">Earn</span><br />
-                  $170 Per Sale
+                 $275 Per sale
                 </h1>
+                <p
+                  data-aos="fade-up"
+                  data-aos-delay="300"
+                  data-aos-anchor-placement="top-bottom">base commission per sale is $170</p>
                 <p
                   class="body-01"
                   data-aos="fade-up"
