--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                   data-aos-delay="200"
                   data-aos-anchor-placement="top-bottom"
                 >
-                  <span class="default-text-color">Earn</span><br />
+                  <span class="default-text-color">Earn Upto</span><br />
                  $275 Per sale
                 </h1>
                 <p
